Add AddressServer to the enterprise and the peoson
