# src/main/java/com/example/societepersonnel/domain/enterprise/EnterpriseService.java
@@ -1,7 +1,8 @@
 package com.example.societepersonnel.domain.enterprise;
 
-import com.example.societepersonnel.core.exception.EnterprisePersonalException;
+import com.example.societepersonnel.core.exception.EnterprisePersonException;
 import com.example.societepersonnel.core.rest.Codes;
+import com.example.societepersonnel.core.utils.StringUtils;
 import com.example.societepersonnel.domain.address.Address;
 import com.example.societepersonnel.domain.address.AddressMapper;
 import com.example.societepersonnel.domain.address.AddressService;
@@ -39,16 +40,17 @@ public class EnterpriseService {
 
     private Enterprise searchEnterpriseById(Long id) {
         return enterpriseRepository.findById(id).orElseThrow(()
-                -> new EnterprisePersonalException(Codes.ERR_ENTREPRESE_NOT_FOUND));
-
+                -> new EnterprisePersonException(Codes.ERR_ENTREPRESE_NOT_FOUND));
     }
 
     public EnterpriseDto createEnterprise(EnterpriseDto enterpriseDto) {
-        // Add personnal ?
         Enterprise enterprise = enterpriseMapper.toEntity(enterpriseDto);
-        Long id_addLong = enterpriseDto.getAddressId();
-        Address address = searchEnterpriseAddress(id_addLong);
+
+        AddressDto addressDto = enterpriseDto.getLocalAddress();
+        addressDto = addressService.createAddress(addressDto);
+        Address address = addressMapper.toEntity(addressDto);
         enterprise.setAddress(address);
+
         enterprise = enterpriseRepository.save(enterprise);
         log.info("the addition of the company {}", enterpriseDto.getName());
         return enterpriseMapper.toDto(enterprise);
@@ -68,13 +70,17 @@ public class EnterpriseService {
 
     public EnterpriseDto updateEnterprise(Long id, EnterpriseDto enterpriseDto) {
         Enterprise enterprise = enterpriseMapper.toEntity(enterpriseDto);
-        enterprise.setId(id);
-        Long id_address = enterpriseDto.getAddressId();
-        Address address = searchEnterpriseAddress(id_address);
-        enterprise.setAddress(address);
-        enterprise = enterpriseRepository.save(enterprise);
-        log.info("The company is successfully modified {}", enterprise.getName());
-        return enterpriseMapper.toDto(enterprise);
+
+        AddressDto addressDto = enterpriseDto.getLocalAddress();
+        if (StringUtils.isNotNullOrNotEmpty(addressDto.getId())) {
+            addressDto = addressService.updateAddress(addressDto.getId(), addressDto);
+            enterprise.setId(id);
+            enterprise.setAddress(addressMapper.toEntity(addressDto));
+            enterprise = enterpriseRepository.save(enterprise);
+            log.info("The company is successfully modified {}", enterprise.getName());
+            return enterpriseMapper.toDto(enterprise);
+        } else
+            throw new EnterprisePersonException(Codes.ERR_ADRESS_NOT_VAlID);
     }
 
     public void deleteEnterprise(Long id) {
