# src/main/resources/open-api/openapi-spec.yaml
@@ -4,6 +4,132 @@ info:
   version: 1.0.0
   description: A brand new API with no content.  Go nuts!
 paths:
+  /persons:
+    get:
+      tags:
+        - Person
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PersonDto'
+          description: Get all persons in the base
+      operationId: findAllPersons
+      summary: Get all persons
+    post:
+      requestBody:
+        description: 'Add person in the base '
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonDto'
+        required: true
+      tags:
+        - Person
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonDto'
+          description: Created person successfully
+      operationId: createPerson
+      summary: Create person
+  '/persons/{id}':
+    summary: Path used to manage a single personDto.
+    description: >-
+      The REST endpoint/path used to get, update, and delete single instances of an `personDto`.  This
+      path contains `GET`, `PUT`, and `DELETE` operations used to perform the get, update, and delete
+      tasks, respectively.
+    get:
+      tags:
+        - Person
+      parameters:
+        -
+          name: id
+          description: A unique identifier for a `personDto`.
+          schema:
+            format: int64
+            type: integer
+          in: path
+          required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonDto'
+          description: Successful response - returns a single `person`.
+        '404':
+          content:
+            application/json:
+              schema:
+                type: string
+          description: Person not found
+      operationId: findPersonById
+      summary: Get a person by id
+      description: Gets the details of a single instance of a `personDto`.
+    put:
+      requestBody:
+        description: Updated `personDto` information.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonDto'
+        required: true
+      tags:
+        - Person
+      parameters:
+        -
+          name: id
+          description: A unique identifier for a `personDto`.
+          schema:
+            format: int64
+            type: integer
+          in: path
+          required: true
+      responses:
+        '202':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonDto'
+          description: Successful response.
+      operationId: updatePerson
+      summary: Update a person
+      description: Updates an existing `personDto`.
+    delete:
+      tags:
+        - Person
+      parameters:
+        -
+          name: id
+          description: A unique identifier for a `personDto`.
+          schema:
+            format: int64
+            type: integer
+          in: path
+          required: true
+      responses:
+        '204':
+          description: The person has been successfully deleted
+        '404':
+          description: The person not found.
+      operationId: deletePerson
+      summary: Delete a person by id
+      description: Deletes an existing `person`.
+    parameters:
+      -
+        name: id
+        description: A unique identifier for a `personDto`.
+        schema:
+          format: int64
+          type: integer
+        in: path
+        required: true
   /addresses:
     summary: Path used to manage the list of adressedtos.
     description: >-
@@ -11,7 +137,7 @@ paths:
       contains a `GET` and `POST` operation to perform the list and create tasks, respectively.
     get:
       tags:
-        - Address
+        - Adresse
       responses:
         '200':
           content:
@@ -20,10 +146,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AddressDto'
-          description: Successful response - returns an array of `addresses` entities.
+          description: Successful response - returns an array of `adresseDto` entities.
       operationId: findAddresses
-      summary: list of addresses
-      description: Gets a list of all `addresses` entities.
+      summary: List All adresses
+      description: Gets a list of all `adresseDto` entities.
     post:
       requestBody:
         description: A new `adresseDto` to be created.
@@ -33,16 +159,16 @@ paths:
               $ref: '#/components/schemas/AddressDto'
         required: true
       tags:
-        - Address
+        - Adresse
       responses:
         '201':
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AddressDto'
-          description: address is created successfully.
+          description: Successful response.
       operationId: createAddress
-      summary: Create a new address
+      summary: Create a adresse
       description: Creates a new instance of a `adresseDto`.
   '/addresses/{id}':
     summary: Path used to manage a single adresseDto.
@@ -52,7 +178,7 @@ paths:
       tasks, respectively.
     get:
       tags:
-        - Address
+        - Adresse
       parameters:
         -
           name: id
@@ -68,16 +194,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AddressDto'
-          description: Successful response - returns a single `Address`.
+          description: Successful response - returns a single `adresse`.
         '404':
           content:
             application/json:
               schema:
                 type: string
-          description: Address Not Found
+          description: Not Found Adresse
       operationId: findAddressById
       summary: Get an adress with id
-      description: Gets the details of a single instance of an `Address`.
+      description: Gets the details of a single instance of a `adresseDto`.
     put:
       requestBody:
         description: Updated `adresseDto` information.
@@ -87,7 +213,7 @@ paths:
               $ref: '#/components/schemas/AddressDto'
         required: true
       tags:
-        - Address
+        - Adresse
       parameters:
         -
           name: id
@@ -105,11 +231,11 @@ paths:
                 $ref: '#/components/schemas/AddressDto'
           description: Successful response.
       operationId: updateAddress
-      summary: Update an address
-      description: Updates an existing `Address`.
+      summary: Update an adress
+      description: Updates an existing `adresseDto`.
     delete:
       tags:
-        - Address
+        - Adresse
       parameters:
         -
           name: id
@@ -121,142 +247,16 @@ paths:
           required: true
       responses:
         '204':
-          description: The Address has been successfully deleted
+          description: The Adress has been successfully deleted
         '404':
-          description: The Address not found.
+          description: The Adress not found.
       operationId: deleteAddress
-      summary: Delete an address
-      description: Deletes an existing `Address`.
+      summary: Delete an adress
+      description: Deletes an existing `adresseDto`.
     parameters:
       -
         name: id
         description: A unique identifier for a `adresseDto`.
-        schema:
-          format: int64
-          type: integer
-        in: path
-        required: true
-  /personals:
-    get:
-      tags:
-        - Personal
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/PersonalDto'
-          description: Get all personals in the base
-      operationId: findPersonals
-      summary: list of personals
-    post:
-      requestBody:
-        description: 'Add person in the base '
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PersonalDto'
-        required: true
-      tags:
-        - Personal
-      responses:
-        '201':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PersonalDto'
-          description: a personnal is successfully created
-      operationId: createPersonal
-      summary: Create a new personal
-  '/personals/{id}':
-    summary: Path used to manage a single personDto.
-    description: >-
-      The REST endpoint/path used to get, update, and delete single instances of an `personDto`.  This
-      path contains `GET`, `PUT`, and `DELETE` operations used to perform the get, update, and delete
-      tasks, respectively.
-    get:
-      tags:
-        - Personal
-      parameters:
-        -
-          name: id
-          description: A unique identifier for a `personDto`.
-          schema:
-            format: int64
-            type: integer
-          in: path
-          required: true
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PersonalDto'
-          description: Successful response - returns a single `personal`.
-        '404':
-          content:
-            application/json:
-              schema:
-                type: string
-          description: Personal not found
-      operationId: findPersonalById
-      summary: Get a personal by id
-      description: Gets the details of a single instance of a `personal`.
-    put:
-      requestBody:
-        description: Updated `personal` information.
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PersonalDto'
-        required: true
-      tags:
-        - Personal
-      parameters:
-        -
-          name: id
-          description: A unique identifier for a `personDto`.
-          schema:
-            format: int64
-            type: integer
-          in: path
-          required: true
-      responses:
-        '202':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PersonalDto'
-          description: Successful response.
-      operationId: updatePersonal
-      summary: Update a personal
-      description: Updates an existing `personal`.
-    delete:
-      tags:
-        - Personal
-      parameters:
-        -
-          name: id
-          description: A unique identifier for a `personDto`.
-          schema:
-            format: int64
-            type: integer
-          in: path
-          required: true
-      responses:
-        '204':
-          description: The personal has been successfully deleted
-        '404':
-          description: The personal not found.
-      operationId: deletePersonal
-      summary: Delete a personal by id
-      description: Deletes an existing `personal`.
-    parameters:
-      -
-        name: id
-        description: A unique identifier for a `personDto`.
         schema:
           format: int64
           type: integer
@@ -278,13 +278,13 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/EnterpriseDto'
-          description: Successful response - returns an array of `enterprise` entities.
+          description: Successful response - returns an array of `enterpriseDto` entities.
       operationId: findEnterprises
-      summary: list of Entreprises
-      description: Get a list of all `Entreprises` entities.
+      summary: List All enterprises
+      description: Gets a list of all `enterpriseDto` entities.
     post:
       requestBody:
-        description: A new `enterprise` to be created.
+        description: A new `enterpriseDto` to be created.
         content:
           application/json:
             schema:
@@ -300,7 +300,7 @@ paths:
                 $ref: '#/components/schemas/EnterpriseDto'
           description: Successful response.
       operationId: createEnterprise
-      summary: Create a new enterprise
+      summary: Create a enterprise
       description: Creates a new instance of a `enterpriseDto`.
   '/enterprises/{id}':
     summary: Path used to manage a single enterpriseDto.
@@ -326,7 +326,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/EnterpriseDto'
-          description: Successful response - returns a single `Entreprise`.
+          description: Successful response - returns a single `enterpriseDto`.
         '404':
           content:
             application/json:
@@ -334,11 +334,11 @@ paths:
                 type: string
           description: Not Found Entreprise
       operationId: findEnterpriseById
-      summary: Get an Entreprise
-      description: Gets the details of a single instance of a `Entreprise`.
+      summary: Get an enterprise
+      description: Gets the details of a single instance of a `enterpriseDto`.
     put:
       requestBody:
-        description: Updated `Entreprise` information.
+        description: Updated `enterpriseDto` information.
         content:
           application/json:
             schema:
@@ -363,8 +363,8 @@ paths:
                 $ref: '#/components/schemas/EnterpriseDto'
           description: Successful response.
       operationId: updateEnterprise
-      summary: Update an Entreprise
-      description: Updates an existing `Entreprise`.
+      summary: Update a enterpriseDto
+      description: Updates an existing `enterpriseDto`.
     delete:
       tags:
         - Entreprise
@@ -383,8 +383,8 @@ paths:
         '404':
           description: The Entreprise not found.
       operationId: deleteEnterprise
-      summary: Delete an Entreprise
-      description: Deletes an existing `Entreprise`.
+      summary: Delete an enterprise
+      description: Deletes an existing `enterpriseDto`.
     parameters:
       -
         name: id
@@ -396,6 +396,29 @@ paths:
         required: true
 components:
   schemas:
+    PersonDto:
+      description: Person Dto
+      type: object
+      properties:
+        id:
+          format: int64
+          type: integer
+        name:
+          type: string
+        post:
+          enum:
+            - PRESIDENT
+            - HRD
+            - ADMINISTRATOR
+            - EMPLOYEE
+          type: string
+        enterprise_id:
+          format: int64
+          type: integer
+        local_address:
+          $ref: '#/components/schemas/AddressDto'
+        lastname:
+          type: string
     AddressDto:
       description: Adresse Dto
       type: object
@@ -405,36 +428,12 @@ components:
           type: integer
         address:
           type: string
-        postal_code:
-          type: string
         country:
           type: string
         city:
           type: string
-    PersonalDto:
-      description: Person Dto
-      type: object
-      properties:
-        id:
-          format: int64
-          type: integer
-        name:
+        postal_code:
           type: string
-        lastName:
-          type: string
-        post:
-          enum:
-            - PRESIDENT
-            - HRD
-            - ADMINISTRATOR
-            - EMPLOYEE
-          type: string
-        address_id:
-          format: int64
-          type: integer
-        enterprise_id:
-          format: int64
-          type: integer
     EnterpriseDto:
       description: Entreprise Dto
       type: object
@@ -444,12 +443,11 @@ components:
           type: integer
         name:
           type: string
+        local_address:
+          $ref: '#/components/schemas/AddressDto'
         tax_number:
           type: string
-        address_id:
-          format: int64
-          type: integer
-        personals:
+        persons:
           type: array
           items:
-            $ref: '#/components/schemas/PersonalDto'
+            $ref: '#/components/schemas/PersonDto'
